style.css
/* Global Section */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Garamond;
}

html {
  width: 100%;
}

button {
  border: none;
}

/* HEADER */

.container-nav {
  position: fixed;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  align-items: center;
  width: 100%;
  height: 45px;
  z-index: 50;
  background-color: rgb(255, 255, 255, 0.6);
  transition: 0.1s;
}

.logo-container {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  cursor: pointer;
}

.logo-container img {
  width: 130px;
}

/* navigation */
.navigation {
  width: 100%;
  font-size: 1rem;
  display: flex;
  justify-content: baseline;
  align-items: center;
  height: 100%;
}

.navigation ul i {
  display: none;
}

/* Sidebar */

.sidebar-menus {
  display: none;
  position: fixed;
  background-color: rgb(255, 255, 255, 0.6);
  z-index: 99;
  width: 50%;
  max-height: calc(100vh - 45px);
  margin-top: 45px;
  transition: 0.1s;
}

.sidebar-menus ul {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  list-style: none;
  /* background-color: aqua; */
}

.sidebar-menus ul li {
  cursor: pointer;
  width: 100%;
  padding: calc(50% / 4) 0;
  text-align: center;
}

/* .sidebar-menus ul li:first-child {
  border-top: 1px solid black;
} */

.sidebar-menus ul li:not(:last-child) {
  border-bottom: 1px black solid;
}

.navigation ul {
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: baseline;
  align-items: center;
  list-style: none;
  margin-left: 15px;
}

.navigation ul li:not(:last-child) {
  margin-right: 2px;
}

.navigation ul li {
  padding: 6px;
  cursor: pointer;
  border: 1px solid transparent;
}

.navigation ul li:hover {
  border: 1px solid black;
  border-radius: 3px;
}

/* account elements */
.user-in {
  display: flex;
  justify-content: end;
  align-items: center;
  width: 100%;
  justify-self: right;
  height: 100%;
}

.username-label {
  font-size: 1.2rem;
  margin-right: 10px;
  text-decoration: underline;
  cursor: pointer;
}

.crt-acc-btn,
.logout-btn {
  font-size: 1rem;
  padding: 6px;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 3px;
  background-color: transparent;
  margin-right: 15px;
}

.crt-acc-btn:hover,
.logout-btn:hover {
  border: 1px solid black;
}

/* hidden account form */
.crt-acc-form {
  position: fixed;
  display: none;
  justify-content: center;
  align-items: center;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 52;
}

.signin-container,
.login-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #f2f2f2;
  width: 400px;
  height: 60vh;
}

.signin-container > *,
.login-container > * {
  margin: 6px;
  width: 300px;
  height: 30px;
  font-size: 1.2rem;
  border: none;
}

.signin-container h3,
.login-container h3 {
  text-align: center;
}

.email-form,
.email-login,
.username-form,
.password-form,
.password-form-login {
  width: 300px;
  height: 40px;
  background-color: rgb(255, 255, 255);
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px black solid;
}

.password-form,
.password-form-login {
  position: relative;
}

.email-input,
.email-input-login,
.username,
.password {
  width: 280px;
  height: 30px;
  border: none;
  font-size: 1rem;
}

.email-input:focus,
.email-input-login:focus,
.username:focus,
.password:focus {
  outline: none;
}

.eye-btn,
.eye-btn-login {
  position: absolute;
  top: 0;
  right: 0;
  width: 50px;
  height: 100%;
}

.eye-btn:hover,
.eye-btn-login:hover {
  cursor: pointer;
  opacity: 0.8;
}

.crt-acc-btn-form,
.login-btn {
  background-color: #595959;
  border: none;
  color: white;
  height: 40px;
}

.crt-acc-btn-form:hover,
.login-btn:hover {
  cursor: pointer;
  opacity: 0.9;
}

.crt-acc-btn-form:active,
.login-btn:active {
  opacity: 0.5;
}

.to-login-btn,
.to-signin-btn {
  background-color: none;
  border: none;
  color: rgb(0, 0, 0);
  font-size: 1rem;
  text-decoration: underline;
}

.to-login-btn:hover,
.to-signin-btn:hover {
  cursor: pointer;
  opacity: 0.9;
}

.to-login-btn:active,
.to-signin-btn:active {
  opacity: 0.5;
}

/* Create Account success */
.crt-acc-success {
  position: fixed;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 450px;
  height: 350px;
  z-index: 53;
}

.crt-acc-success img {
  width: 100px;
  filter: invert(100%);
}

.check-success-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  background-color: #595959;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  width: 100%;
  height: 100%;
}

.check-success-section h2 {
  color: white;
  font-size: 1.8rem;
  font-weight: 300;
}

.message-continue-section {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  height: 100%;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  background-color: rgb(242, 242, 242);
}

.message-continue-section p {
  font-size: 1rem;
}

.message-continue-section button {
  background-color: #595959;
  border: 1px solid #595959;
  color: white;
  padding: 10px;
  font-size: 1.3rem;
  font-weight: 600;
  cursor: pointer;
}

/* Create Account/ Log in failed */
.check-login,
.check-crt-acc {
  font-size: 0.98rem;
  color: red;
  margin-bottom: 10px;
}

/* log out verification */
.logout-verification {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  z-index: 52;
  width: 300px;
  background-color: white;
  height: 100px;
}

.logout-verification button {
  width: 90px;
  height: 50px;
  cursor: pointer;
  font-size: 1rem;
}

.logout-verify {
  background-color: #595959;
  border: 1px solid #595959;
  color: white;
}

.logout-cancel {
  border: 1px solid black;
}

/* HERO */
#home {
  background-color: #f2f2f2;
  display: flex;
  flex-direction: column;
  /* padding-top: 15vh; */
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.top-img {
  position: relative;
  width: 60%;
  z-index: 1;
  filter: blur(3px);
  opacity: 0.8;
}

.top-text {
  font-size: 1.2rem;
  text-align: center;
  color: #ffffff;
  position: absolute;
  z-index: 2;
}

/* COllECTION */
#shop {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  height: 100vh;
  background-color: #595959;
}

.item-container {
  overflow: hidden;
  position: relative;
  height: 450px;
  margin: 30px 0;
}

#shop .item-container img {
  height: 100%;
  /* width: auto; */
  object-fit: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.5s;
  cursor: pointer;
}

.item-container:hover img {
  scale: 120%;
  filter: brightness(60%);
}

.item-container img:hover + p,
.item-container p:hover {
  display: block;
}

.item-container p {
  position: absolute;
  font-size: 2rem;
  right: 0;
  bottom: 0;
  margin: 6px;
  color: white;
  display: none;
}

/* SLIDESHOW */
.slideshow {
  width: 100%;
  background-color: #f2f2f2;
}

.slides {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.slide img {
  width: 100%;
}

.arrows {
  position: absolute;
  display: flex;
  justify-content: space-between;
  top: 40%;
  width: 100%;
}

.prev,
.next {
  color: rgba(255, 255, 255, 0.3);
  background-color: rgba(0, 0, 0, 0.3);
  font-size: 2rem;
  padding: 20px;
  cursor: pointer;
  transition: 0.3s;
}

.prev:hover,
.next:hover {
  color: rgba(255, 255, 255, 1);
  background-color: #000000;
  opacity: 0.6;
}

/* ABOUT */
#about {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  max-height: 200vh;
  padding: 50px 0;
  background-color: #f2f2f2;
}

#about p {
  font-size: 1.4rem;
  margin-top: 40px;
  margin-left: 20px;
  margin-right: 20px;
}

#about p strong {
  font-size: 2rem;
}

/* SCROLL */
/* WebKit (Chrome, Safari) */
::-webkit-scrollbar {
  width: 12px; /* Width of the scrollbar */
}

::-webkit-scrollbar-thumb {
  background-color: #b3b3b3; /* Color of the scrollbar thumb */
  border-radius: 6px; /* Rounded corners of the thumb */
}

::-webkit-scrollbar-track {
  background-color: #f2f2f2; /* Color of the scrollbar track */
}

/* FOOTER */
footer {
  position: relative;
  height: 13vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(89, 89, 89, 1);
  color: white;
  padding: 6px;
}

/* UTILITY */
.sidebar-hide {
  transform: translateX(-100%);
}
.hide {
  transform: translateY(-45px);
}

.sticky {
  position: fixed;
  background-color: rgb(255, 255, 255, 0.6);
}

.hidden {
  display: none;
}

.overlay {
  display: none;
  background-color: #111;
  width: 100%;
  top: 0;
  position: absolute;
  opacity: 0.5;
  z-index: 51;
}

@media (max-width: 940px) {
  .top-img {
    width: 80%;
  }

  .container-nav ul li {
    display: none;
  }

  .navigation ul i {
    display: block;
    cursor: pointer;
  }

  #shop {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: auto;
  }

  .item-container {
    background-color: aqua;
    width: 300px;
  }

  .item-container img {
    width: 100%;
  }

  #about p {
    font-size: 1.2rem;
  }

  #about p strong {
    font-size: 1.8rem;
  }
}

@media (max-width: 500px) {
  #home {
    height: 90vh;
  }

  .top-text {
    font-size: 1rem;
  }

  #shop {
    height: 800px;
  }

  .item-container {
    width: 35%;
  }

  #about p {
    font-size: 1rem;
  }

  #about p strong {
    font-size: 1.5rem;
  }
}

@media (max-width: 230px) {
  .top-text {
    font-size: 0.6rem;
  }

  .logo {
    font-size: 1.5rem;
  }

  .container-nav ul,
  .user-in {
    display: none;
  }

  #about p {
    font-size: 0.5rem;
  }
}

